[gd_scene load_steps=17 format=2]

[ext_resource path="res://units/player/rect977.png" type="Texture" id=1]
[ext_resource path="res://units/player/Player.gd" type="Script" id=2]
[ext_resource path="res://units/extra/bright.shader" type="Shader" id=3]
[ext_resource path="res://units/extra/attack.tres" type="Animation" id=4]
[ext_resource path="res://units/extra/stun.tres" type="Animation" id=5]
[ext_resource path="res://units/extra/take_damage.tres" type="Animation" id=6]
[ext_resource path="res://units/player/HealInfo.gd" type="Script" id=7]
[ext_resource path="res://units/player/AttackInfo.gd" type="Script" id=8]
[ext_resource path="res://units/player/TakeDamageInfo.gd" type="Script" id=9]
[ext_resource path="res://fonts/FiraGO-Bold.ttf" type="DynamicFontData" id=10]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/bright_amount = 0.0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/FiraGO-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/FiraGO-Bold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 10 )

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Animation" type="AnimationPlayer" parent="Sprite"]
method_call_mode = 1
anims/attack = ExtResource( 4 )
anims/stun = ExtResource( 5 )
anims/take_damage = ExtResource( 6 )

[node name="AttackInfo" type="Node2D" parent="."]
position = Vector2( -20, -20 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 8 )

[node name="Label" type="Label" parent="AttackInfo"]
margin_top = -19.5
margin_bottom = 19.5
size_flags_horizontal = 5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.929412, 0.901961, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="AttackInfo"]

[node name="Timer" type="Timer" parent="AttackInfo"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="TakeDamageInfo" type="Node2D" parent="."]
position = Vector2( -55, -20 )
scale = Vector2( 1.1, 1.1 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="TakeDamageInfo"]
margin_left = -50.0
margin_top = -19.5
margin_right = 50.0
margin_bottom = 19.5
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.854902, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="TakeDamageInfo"]

[node name="Timer" type="Timer" parent="TakeDamageInfo"]

[node name="HealInfo" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Label" type="Label" parent="HealInfo"]
margin_left = -75.0
margin_right = -26.0
margin_bottom = 39.0
rect_min_size = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.133333, 1, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HealInfo"]

[node name="Timer" type="Timer" parent="HealInfo"]
